# brisk

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ticket_system/: asgi.py  settings.py  urls.py  wsgi.py
tickets/: constants.py  error_handlers.py  managers.py  models.py  serializers.py  services.py  swagger_schemas.py  urls.py  views.py
tickets/management/commands/: generate_data.py
tickets/migrations/: 0001_initial.py  0002_auto_20250307_1224.py
tickets/tests/: test_booking.py
