[tool.poetry]
name = "ticket_system"
version = "0.1.0"
description = "A railway ticket reservation system"
authors = ["Prince Kumar <neo11prince@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"
djangorestframework = "^3.12"
psycopg2 = "^2.9"
environ = "^1.0"
django-environ = "^0.12.0"
drf-yasg = "^1.21.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.9b0"
gunicorn = "^20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
